--- a/src/app/reactive/pages/switches-page/switches-page.component.html
+++ b/src/app/reactive/pages/switches-page/switches-page.component.html
@@ -2,7 +2,7 @@
 <hr>
 
 
-<form autocomplete="off">
+<form [formGroup]="myForm" (ngSubmit)="onSave()" autocomplete="off">
 
     <!-- Radio -->
     <div class="row mb-3">
@@ -13,6 +13,7 @@
                 <input class="form-check-input"
                        type="radio"
                        value="M"
+                       formControlName="gender"
                        id="radioMasculino">
                 <label class="form-check-label" for="radioMasculino">
                   Masculino
@@ -23,6 +24,7 @@
                 <input class="form-check-input"
                        type="radio"
                        value="F"
+                       formControlName="gender"
                        id="radioFemenino">
                 <label class="form-check-label" for="radioFemenino">
                   Femenino
@@ -39,6 +41,7 @@
 
             <div class="form-check form-switch mt-2">
                 <input class="form-check-input"
+                       formControlName="wantNotifications"
                        type="checkbox"
                        id="flexSwitchCheckChecked">
                 <label class="form-check-label" for="flexSwitchCheckChecked">Quiero recibir notificaciones</label>
@@ -54,6 +57,7 @@
             <div class="form-check">
                 <input class="form-check-input"
                        type="checkbox"
+                       formControlName="termAndConditions"
                        id="flexCheckDefault">
                 <label class="form-check-label" for="flexCheckDefault">
                   Términos y condiciones de uso
